--- a/debian/rules
+++ b/debian/rules
@@ -3,7 +3,7 @@
 # -*- mode: makefile; coding: utf-8 -*-
 # Copyright 2008-2012, 2015 Jonas Smedegaard <dr@jones.dk>
 # Copyright 2015 Martin Abente Lahaye <tch@sugarlabs.org>
-# Description: Main Debian packaging script for Implode
+# Description: Main Debian packaging script for Help
 #
 # This program is free software; you can redistribute it and/or modify
 # it under the terms of the GNU General Public License as published by
@@ -43,7 +43,7 @@ DEB_COPYRIGHT_CHECK_IGNORE_REGEX = ^data/logo_.*\.png|debian/(changelog|copyrigh
 
 # Needed (always/often/seldom) at runtime
 python-deps = sugar3 gi
-gir-deps = gtk-3.0 webkit-3.0
+gir-deps = glib-2.0 gtk-3.0 webkit-3.0
 CDBS_DEPENDS_$(pkg) = python
 CDBS_DEPENDS_$(pkg) +=, $(patsubst %,$(comma) python-%,$(python-deps))
 CDBS_DEPENDS_$(pkg) +=, $(patsubst %,$(comma) gir1.2-%,$(gir-deps))
