--- a/debian/control
+++ b/debian/control
@@ -3,7 +3,7 @@ Section: x11
 Priority: optional
 Maintainer: Debian Sugar Team <pkg-sugar-devel@lists.alioth.debian.org>
 Uploaders: Jonas Smedegaard <dr@jones.dk>
-Build-Depends: cdbs (>= 0.4.90~),
+Build-Depends: cdbs (>= 0.4.97~),
  devscripts,
  debhelper,
  dh-buildinfo,
@@ -14,6 +14,7 @@ Standards-Version: 3.9.1
 X-Python-Version: 2.7
 Vcs-Git: https://github.com/tchx84/debian-sugar-help-activity.git
 Vcs-Browser: https://github.com/tchx84/debian-sugar-help-activity.git
+DM-Upload-Allowed: yes
 
 Package: sugar-help-activity
 Architecture: all
@@ -27,3 +28,4 @@ Description: Sugar Help activity
  .
  Help provides a quick interface to help documentation
  on Sugar and the activities.
+
